# gasp

./: Cargo.toml  README.md  bug_report_optional_container_field_overwrite.md  debug_depth_trigger.py  debug_dict_parsing_issue.py  debug_field_renaming.py  debug_field_type_attribute.py  debug_incremental_list.py  debug_inner_list_parsing.py  debug_list_union_parse.py  debug_named_union.py  debug_named_union_detailed.py  debug_named_union_fix.py  debug_nested_lists.py  debug_nested_name_overwrite.py  debug_nested_union.py  debug_nested_union_detailed.py  debug_nested_union_parser.py  debug_nested_union_parser2.py  debug_nested_union_stack.py  debug_nested_union_stack_trace.py  debug_optional_containers.py  debug_optional_trigger.py  debug_parser_flow.py  debug_quarterly_reports.py  debug_scalar_streaming.py  debug_scalar_wanted_tags.py  debug_streaming_events.py  debug_torture_exact_failure.py  debug_torture_test_name_issue.py  debug_tuple_parsing.py  debug_type_alias.py  debug_type_alias_tags.py  debug_type_conversion.py  debug_type_names.py  debug_union.py  diff  gasp.pyi  memory.md  pyproject.toml  (+10 more)
docs/: stack_parser_refactor_status.md  tag_parser.md
examples/: constrained.py  constrained.wail  empty_class.py  ideal.wail  jinja_templates.py  list_nested_test.py  person_prompt.py  prompt.wail  prompt_interpolation_demo.py  prompt_template.py  simple_nested_test.py  test.py  test_nested_types.py  test_tag_filtering.py  tool_use.py  tools.lib.wail  typed_parser.py  union_incremental_example.py  union_type_example.py  union_type_summary.md  validate.py
gasp/: __init__.py  deserializable.py  gasp.pyi  template_helpers.py
proptest-regressions/: json_parser.txt
python_tests/: debug_generic_union.py  debug_union.py  edgecase_reson.py  test_cdata_parsing.py  test_container_types.py  test_debug_union_types.py  test_dynamic_class_union.py  test_dynamic_class_union_abc.py  test_empty_classes.py  test_gasp_modules.py  test_generic_union.py  test_incremental_all_types.py  test_incremental_coercion.py  test_list_coercion.py  test_list_parsing_debug.py  test_list_parsing_detailed.py  test_list_tag_debug.py  test_model_dump.py  test_nested_types.py  test_non_deserializable_union.py  test_scalar_parsing.py  test_song_lyrics_parsing.py  test_streaming_instance_fix.py  test_streaming_list_debug.py  test_streaming_list_debug2.py  test_streaming_non_deserializable.py  test_tag_filtering.py  test_template_generation.py  test_template_union_list.py  test_tool_union.py  test_tuple_support.py  test_type_support_summary.py  test_union_flow.py
src/: json_parser.rs  json_sax_scanner.rs  json_tok.rs  json_types.rs  lib.rs  main.rs  parser.rs  parser_types.rs  (+11 more)
(+5 files in other folders)
