[package]
name = "gasp"
version = "1.1.0"
edition = "2021"

[lib]
name = "gasp"
crate-type = ["cdylib"]  # Needed for Python bindings
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
regex = "1.10.3"
pyo3 = { version = "0.19", features = ["extension-module"] }
tempfile = "3"
once_cell = "1.21.3"
strsim = "0.11.1"
serde_json    = "1"
log = "0.4"
env_logger = "0.10"
xml = { version = "0.3.0", package = "RustyXML" }

[dev-dependencies]
proptest      = "1"           # property testing
serde_json    = "1"
