[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "linux"
strip = true
include = ["gasp/*.py"]
module-name = "gasp.gasp"

[project]
name = "gasp-py"
version = "1.1.0"
description = "GASP (Gee Another Schema Parser) - A validator and type safe deserializer for LLM output."
authors = [{ name = "Ian Butler", email = "ian@bismuth.sh" }]
requires-python = ">=3.7"
dependencies = [
    "jinja2>=3.0.0"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["schema", "validation", "json", "llm", "prompt", "parser", "type-safe", "deserializer"]
license = { text = "Apache-2.0" }
readme = "README.md"

[project.urls]
Repository = "https://github.com/iantbutler01/gasp"
Documentation = "https://github.com/iantbutler01/gasp#readme"
